{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 107,
  "lineage": "537e6f01-48b3-6ba7-310c-ac591ea5313f",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "first-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/095fa5e1-daf6-44a8-9201-0ca2b7a02c19/resourceGroups/First-Resource-Grp/providers/Microsoft.Network/publicIPAddresses/Public-IP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.113.141.50",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "Public-IP",
            "resource_group_name": "First-Resource-Grp",
            "sku": "Basic"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "first-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/095fa5e1-daf6-44a8-9201-0ca2b7a02c19/resourceGroups/First-Resource-Grp/providers/Microsoft.Network/networkInterfaces/First-Network-Interface",
            "internal_domain_name_suffix": "kyaxdyqn0jcuzkwsmnprkyvdza.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/095fa5e1-daf6-44a8-9201-0ca2b7a02c19/resourceGroups/First-Resource-Grp/providers/Microsoft.Network/publicIPAddresses/Public-IP",
                "subnet_id": "/subscriptions/095fa5e1-daf6-44a8-9201-0ca2b7a02c19/resourceGroups/First-Resource-Grp/providers/Microsoft.Network/virtualNetworks/First-Virtual-Network/subnets/First-Subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-96-E1-FC",
            "name": "First-Network-Interface",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "First-Resource-Grp",
            "virtual_machine_id": "/subscriptions/095fa5e1-daf6-44a8-9201-0ca2b7a02c19/resourceGroups/First-Resource-Grp/providers/Microsoft.Compute/virtualMachines/Ubuntu-Vm-18.04"
          },
          "dependencies": [
            "azurerm_public_ip.first-ip",
            "azurerm_resource_group.first-rg",
            "azurerm_subnet.first-sub",
            "azurerm_virtual_network.first-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "first-sec-grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/095fa5e1-daf6-44a8-9201-0ca2b7a02c19/resourceGroups/First-Resource-Grp/providers/Microsoft.Network/networkSecurityGroups/Network-Security-Grp",
            "location": "westeurope",
            "name": "Network-Security-Grp",
            "resource_group_name": "First-Resource-Grp",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Security-Rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.first-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "first-net-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/095fa5e1-daf6-44a8-9201-0ca2b7a02c19/resourceGroups/First-Resource-Grp/providers/Microsoft.Network/networkSecurityGroups/Network-Security-Grp/securityRules/Security-Rule",
            "name": "Security-Rule",
            "network_security_group_name": "Network-Security-Grp",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "First-Resource-Grp",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.first-sec-grp",
            "azurerm_resource_group.first-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "first-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/095fa5e1-daf6-44a8-9201-0ca2b7a02c19/resourceGroups/First-Resource-Grp/providers/Microsoft.Network/publicIPAddresses/Public-IP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.113.141.50",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "Public-IP",
            "resource_group_name": "First-Resource-Grp",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.first-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "first-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/095fa5e1-daf6-44a8-9201-0ca2b7a02c19/resourceGroups/First-Resource-Grp/providers/Microsoft.Network/virtualNetworks/First-Virtual-Network/subnets/First-Subnet",
            "name": "First-Subnet",
            "resource_group_name": "First-Resource-Grp",
            "virtual_network_name": "First-Virtual-Network"
          },
          "dependencies": [
            "azurerm_resource_group.first-rg",
            "azurerm_virtual_network.first-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet-grp-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/095fa5e1-daf6-44a8-9201-0ca2b7a02c19/resourceGroups/First-Resource-Grp/providers/Microsoft.Network/virtualNetworks/First-Virtual-Network/subnets/First-Subnet",
            "network_security_group_id": "/subscriptions/095fa5e1-daf6-44a8-9201-0ca2b7a02c19/resourceGroups/First-Resource-Grp/providers/Microsoft.Network/networkSecurityGroups/Network-Security-Grp",
            "subnet_id": "/subscriptions/095fa5e1-daf6-44a8-9201-0ca2b7a02c19/resourceGroups/First-Resource-Grp/providers/Microsoft.Network/virtualNetworks/First-Virtual-Network/subnets/First-Subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.first-sec-grp",
            "azurerm_resource_group.first-rg",
            "azurerm_subnet.first-sub",
            "azurerm_virtual_network.first-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "first-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e2710156-d20d-4c45-aad2-635f1562a3c8",
            "id": "/subscriptions/095fa5e1-daf6-44a8-9201-0ca2b7a02c19/resourceGroups/First-Resource-Grp/providers/Microsoft.Network/virtualNetworks/First-Virtual-Network",
            "location": "westeurope",
            "name": "First-Virtual-Network",
            "resource_group_name": "First-Resource-Grp",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/095fa5e1-daf6-44a8-9201-0ca2b7a02c19/resourceGroups/First-Resource-Grp/providers/Microsoft.Network/virtualNetworks/First-Virtual-Network/subnets/First-Subnet",
                "name": "First-Subnet",
                "security_group": "/subscriptions/095fa5e1-daf6-44a8-9201-0ca2b7a02c19/resourceGroups/First-Resource-Grp/providers/Microsoft.Network/networkSecurityGroups/Network-Security-Grp"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.first-rg"
          ]
        }
      ]
    }
  ]
}